Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-01-17 (SVN):
    * draw.c: change several places where a bit shift was used to divide
      vid.rowbytes by 2: behaviour is undefined for signed numbers with
      negative values. (from a recent commit in tyrquake git repo.)
    * updated version date stamp to 2013-01-17.

2013-01-16 (SVN):
    * view.c (V_Init): in opengl builds, do initialize the gamma ramps
      array along with the gamma table. minor tidy-up.
    * gl_vidnt.c (AppActivate): add paranoid check to apply gamma only
      if host is initialized and we aren't in the middle of a video mode
      change.
    * gl_vidamiga.c, gl_vidnt.c, gl_vidsdl.c: renamed VID_SetPalete() to
      VID_InitPalette() to be called only from VID_Init() as the first
      thing. VID_InitPalette only generates the translation tables, etc.
      added VID_SetPalete as a nop function.
    * updated version date stamp to 2013-01-16.

2013-01-15 (SVN):
    * updated the release notes file for v1.5.6.
    * COM_Parse: really fix quoted strings parsing when EOF is reached
      before the closing quotation mark.

2013-01-15 (SVN):
    * updated version date stamp to 2013-01-15.

2013-01-15 (SVN):
    * engine/h2shared/common.c (COM_Parse): support for C-style /*...*/
      comments. minor tidy-up to reduce diff output against utils-side
      COM_Parse().
    * utils/common/cmdlib.c (COM_Parse): removed com_eof as it has never
      been used. fixed quoted strings parsing so it actually stops when
      EOF is reached before the closing quotation mark. changed C-style
      comments parsing so we never read beyond EOF. tidied up the layout
      so it looks the same as engine-side COM_Parse().

2013-01-15 (SVN):
    * utils, hcc, dhcc, pr_lex.c: removed defunct code in PR_NewLine()
      which was meant to function when _PrintNextLine() was to be used
      which had never been and removed ages ago. fixed LexWhitespace()