@@ -95,8 +95,9 @@ void *safe_malloc(size_t count)
   void *p;
 
   p = malloc(count);
-  if (p == NULL)
+  if (p == NULL) {
     DEBUG_MSG("Sorry. Couldn't malloc %lu bytes.\n", (unsigned long)count);
+  }
   return p;
 }
 
