@@ -352,8 +352,9 @@ static MidInstrument *load_instrument(MidSong *song, const char *name,
 
       if (strip_envelope==1)
 	{
-	  if (sp->modes & MODES_ENVELOPE)
+	  if (sp->modes & MODES_ENVELOPE) {
 	    DEBUG_MSG(" - Removing envelope\n");
+	  }
 	  sp->modes &= ~MODES_ENVELOPE;
 	}
       else if (strip_envelope != 0)
